style.css
a, a:visited{
	color: black;
	text-decoration: none;
}

html, body, .app-container{
	background: url('images/bg.png');
	font-family: 'Open Sans', sans-serif;
	height: 100%;
	margin: 0;
	width: 100%;
}

#user-label {
	background-color: #333;
	border-radius: 10px;
	color: white;
	height: 20px;
	margin-right: 50px;
	margin-top: 10px;
	padding: 10px;
	position: fixed;
	right: 0;
	text-align: center;
	top: 0;
	width: 200px;
	z-index: 3;
}

#map-canvas {
	height: 100%;
	margin: 0;
	padding: 0;
	z-index: 1;
}

#login-button {
	background: url('images/icon_fb_login.png');
	color: white;
	cursor: pointer;
	height: 450px;
	left: 50%;
	padding-top: 50px;
	position: absolute;
	text-align: center;
	top: 50%;
	transform: translate(-50%,-50%);
	width: 500px;
	z-index: 3;
}

#login-button:hover {
	background: url('images/icon_fb_login_hover.png');
	color: #3b5998;
}

#overlay {
	background: black;
	height: 100%;
	opacity: 0.5;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 2;
}


 /*  FOOD TRUCK POP UP */
#foodTruckPopupContainer {
  font-size: 15px;
  font-weight: bold;
  height: 200px;
  padding-left: 5px;
  position: relative;
  width: 300px;
}

#more-details-div {
  background-color: #ddd;
  bottom: 10px;
  clear: both;
  color: red;
  font-size: 16px;
  padding: 10px;
  position: absolute;
  text-align: center;
  width: 100%;
}

.invalid[data-invalid="false"]{
  display: none;
}

.invalid[data-invalid="true"] {
  color: red;
  display: block;
}

.pop-up-rating {
  unicode-bidi: bidi-override;
  direction: rtl;
  float: left;
}
.pop-up-rating > span {
  display: inline-block;
  position: relative;
  width: 1.1em;
}
/*.pop-up-rating > span:hover:before,
.pop-up-rating > span:hover ~ span:before {
   content: "\2605";
   position: absolute;
}*/

/* Food Truck page */
#foodtruckpage-main {
  background: white;
  left: 50%;
  padding: 30px;
  position: absolute;
  top: 30%;
  transform: translate(-50%, -120px);

  margin-bottom: 100px;
}

#foodtruckdetails-div {
  font-weight: bold;
}

#favourited-icon {
	font-size: 50px;
	display: block;
	/*position: absolute;*/
	float: right;
	margin-right: 15px;
	margin-top: 10px;
	color: red;
	cursor: pointer;
	opacity: 0.1;
}

/* Memo Section */
textarea {
  font-size: 15pt;
  padding: 5px;
  width: 96.8%;
}

.button {
  display: inline;
  font-size: 10pt;
  height: 30px;
  margin-top: 5px;
  max-width: 49%;
  width: 100%;
}

/* Ratings Section */
.ratings {
  font-size: 20pt;
  list-style: none;
  display: inline-block;
  width: 100%;
}

ul.ratings li {
  cursor: pointer;
  display: inline;
}

ul > span {
  float: right;
  font-size: 14pt;
  margin-right: 50px;
  padding: 5px;
}


/* Comments section */
#a-comment {
	background-color: #eee;
	margin-bottom: 5px;
	margin-right: 9px;
	margin-top: 5px;
	padding: 10px;
	position: relative;
}

#comments-name {
	font-size: 12px;
	font-weight: bold;
	text-transform: uppercase;
}

#comments-date {
	float: right;
	font-size: 12px;
	font-style: italic;
	font-weight: lighter;
	position: relative;
}

#comments-comment {
	margin-top: 5px;
}

#deleteComment {
	background: #eee;
	border: none;
	color: red;
	cursor: pointer;
	display: none;
	font-size: 12px;
	margin-top: -15px;
	position: absolute;
	right: 5px;
}

